# internal/models/userORM.go
@@ -7,3 +7,10 @@ type User struct {
 	Email       string `json:"email"`
 	Password    string `json:"password,omitempty"`
 }
+
+type UserUpdate struct {
+	Name        string `json:"name,omitempty"`
+	Information string `json:"information,omitempty"`
+	Email       string `json:"email,omitempty"`
+	Password    string `json:"password,omitempty"`
+}
